# notch-simulations

./: Cargo.toml  LICENSE  README.md  plot.gp
data/: exp1_sybil_bs.csv  exp1_truthful_50.csv  exp1_truthful_65.csv  exp2_cost.csv  exp3_results.csv  exp4_convergence.csv
src/: engine.rs  exp1_merit_gating.rs  exp2_sybil_cost.rs  exp3_impossibility.rs  exp4_convergence.rs  main.rs
